--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[package]
-name = "advent_of_code"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
+[workspace]
+resolver = "3"
+members = ["day1", "day2","day3"]
